--- a/top/db/top.lpc.html
+++ b/top/db/top.lpc.html
@@ -224,7 +224,23 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >alu</TD>
+<TD >Memory</TD>
+<TD >19</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >ALUx</TD>
 <TD >19</TD>
 <TD >0</TD>
 <TD >0</TD>
