--- a/SimProcV2/db/processor.lpc.html
+++ b/SimProcV2/db/processor.lpc.html
@@ -98,13 +98,13 @@
 <TR >
 <TD >H2</TD>
 <TD >6</TD>
-<TD >4</TD>
 <TD >0</TD>
-<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >7</TD>
-<TD >4</TD>
-<TD >4</TD>
-<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -130,13 +130,13 @@
 <TR >
 <TD >H3</TD>
 <TD >6</TD>
-<TD >4</TD>
 <TD >0</TD>
-<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >7</TD>
-<TD >4</TD>
-<TD >4</TD>
-<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -210,13 +210,13 @@
 <TR >
 <TD >REGLED</TD>
 <TD >12</TD>
-<TD >8</TD>
 <TD >0</TD>
-<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >10</TD>
-<TD >8</TD>
-<TD >8</TD>
-<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -224,15 +224,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >ALU</TD>
+<TD >MEMORY</TD>
 <TD >19</TD>
-<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >8</TD>
-<TD >10</TD>
-<TD >8</TD>
-<TD >8</TD>
-<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
