--- a/SimProcV2/db/processor.lpc.html
+++ b/SimProcV2/db/processor.lpc.html
@@ -224,15 +224,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >MEMORY</TD>
-<TD >19</TD>
+<TD >InstructionRegister</TD>
+<TD >10</TD>
+<TD >13</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >8</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >13</TD>
+<TD >40</TD>
+<TD >13</TD>
+<TD >13</TD>
+<TD >13</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
