--- a/SimProcV2/db/processor.lpc.html
+++ b/SimProcV2/db/processor.lpc.html
@@ -224,7 +224,23 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >DAPATATH|ALU</TD>
+<TD >FiniteStateMachine</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >Datapath|ALU</TD>
 <TD >19</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -240,7 +256,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >DAPATATH|RegisterFile</TD>
+<TD >Datapath|RegisterFile</TD>
 <TD >16</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -256,7 +272,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >DAPATATH|InstructionRegister</TD>
+<TD >Datapath|InstructionRegister</TD>
 <TD >10</TD>
 <TD >13</TD>
 <TD >0</TD>
@@ -272,7 +288,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >DAPATATH|Memory</TD>
+<TD >Datapath|Memory</TD>
 <TD >19</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -288,7 +304,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >DAPATATH|ProgramCounter</TD>
+<TD >Datapath|ProgramCounter</TD>
 <TD >10</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -304,7 +320,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >DAPATATH</TD>
+<TD >Datapath</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
